tests/baselines/reference/project/rootDirectory/node/rootDirectory.errors.txt
lib.es5.d.ts(48,21): error TS6054: File 'lib.es2009.uint16array' has an unsupported extension. The only supported extensions are '.ts', '.tsx', '.d.ts', '.cts', '.d.cts', '.mts', '.d.mts'.


==== FolderA/FolderB/FolderC/fileC.ts (0 errors) ====
    class C {
    }
    
==== FolderA/FolderB/fileB.ts (0 errors) ====
    /// <reference path='FolderC/fileC.ts'/>
    class B {
        public c: C;
    }
    